# 3DOF-Arm-Robotics-Project-UMNG

./: .gitignore.txt  README.md
Bases Pinpones/: Grupocarlitos.DXF  Grupocarlitos.SLDPRT  Laurayyo.DXF  Laurayyo.SLDPRT  Segundogrupo.DXF  Segundogrupo.SLDPRT
Codigos MATLAB/: IC_VelocidadesCrucero.mlx  Trayectorias.mlx
Hardware/Brazo General/: Base alta delantera con hueco.SLDPRT  Base ancha arriba.SLDPRT  Base ancha.SLDPRT  Base pinpones.SLDPRT  Base.SLDASM  Base2Ancha-pinpon.SLDPRT  BaseBajaPlaneta.SLDPRT  BasePrincipal - copia.SLDPRT  Ensamblee.SLDASM  Eslabon1.SLDPRT  Lateral pinpon.SLDPRT  Piñon 18 dientes, Modulo 2.SLDPRT  PlanetarioBase.SLDASM  (+9 more)
Hardware/Brazo General/brazo_robotico_urdf/Ensamblee/: CMakeLists.txt  package.xml
Hardware/Brazo General/brazo_robotico_urdf/Ensamblee/launch/: display.launch  gazebo.launch  gazebo.launch.py
Hardware/Brazo General/brazo_robotico_urdf/Ensamblee/meshes/: base_link.STL
Hardware/Brazo General/brazo_robotico_urdf/Ensamblee/urdf/: Ensamblee.urdf
Simulación/ros2_ws/install/robot_arm_urdf/share/robot_arm_urdf/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Simulación/ros2_ws/install/robot_arm_urdf/share/robot_arm_urdf/cmake/: robot_arm_urdfConfig.cmake
Simulación/ros2_ws/install/robot_arm_urdf/share/robot_arm_urdf/meshes/: base_link.STL  link_1.STL  link_3.STL  link_5.STL  link_6.STL  link_7.STL
Simulación/ros2_ws/install/robot_arm_urdf/share/robot_arm_urdf/urdf/: robot_arm_urdf.csv  robot_arm_urdf.urdf
Software/: Brazolauracarol.txt  interfaz_cinematica.py
(+235 files in other folders)
