<package format="3">
  <name>robot_arm_urdf</name>
  <version>1.0.0</version>
  <description>Robot Arm URDF para ROS 2</description>
  <maintainer email="TODO@email.com">Usuario</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
